PYIC-3514 Resolved 14 reported code smells.